Small Multiple: when we initially and there is scroll bar at the bottom > the scroll bar is getting cropped > but on page switch the scroll is coming correctly

--- a/style/visual.less
+++ b/style/visual.less
@@ -388,3 +388,7 @@ button.dynamic-deviation-button:hover {
 	justify-content: center;
 	padding: 2em 1.5em 1em 1.5em;
 }
+
+.hidden {
+	display: none;
+}
